<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/closeButton"
            android:gravity="center"
            android:paddingEnd="50dp"
            android:text="@string/about_airweb"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/airweb"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/topLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/airweb" />

    <LinearLayout
        android:id="@+id/layoutAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/airweb"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autoLink="map"
            android:gravity="center"
            android:text="@string/address_value"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textSize="19sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutAddress"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/mail_title"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/email"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutMail"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tel_titile"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:text="@string/tel"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>