<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="adapter"
            type="fr.airweb.news.ui.adapter.NewsAdapter" />

        <variable
            name="viewModel"
            type="fr.airweb.news.viewmodel.MainViewModel" />

        <import type="android.view.View" />

        <variable
            name="visibilityNews"
            type="boolean" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:expanded="true">

                <RelativeLayout
                    android:id="@+id/toolbar_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:popupTheme="@style/AppTheme.PopupOverlay">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:layout_marginStart="20dp"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </androidx.appcompat.widget.Toolbar>

                    <com.ferfalk.simplesearchview.SimpleSearchView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/colorPrimary"
                        app:type="card" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_below="@+id/toolbar">

                        <LinearLayout
                            android:id="@+id/triLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_margin="6dp"
                            android:onClick="@{()->viewModel.onTriLayoutClicked()}"
                            android:orientation="horizontal"
                            tools:ignore="RelativeOverlap,UseCompoundDrawables,UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="10dp"
                                android:text="@string/tri"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="34dp"
                                android:layout_height="34dp"
                                android:layout_gravity="center_vertical"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_baseline_sort_24" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/filterLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_margin="6dp"
                            android:onClick="@{()->viewModel.onFilterLayoutClicked()}"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables,UselessParent">

                            <ImageView
                                android:layout_width="34dp"
                                android:layout_height="34dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="10dp"
                                android:contentDescription="@null"
                                android:src="@drawable/ic_baseline_filter_list_24" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="10dp"
                                android:text="@string/filter"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </RelativeLayout>

                </RelativeLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/appbar"
                android:visibility="@{visibilityNews ? View.VISIBLE : View.GONE}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:setAdapter="@{adapter}" />

            <TextView
                android:id="@+id/noData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ops_no_news_founded"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="@{visibilityNews ? View.GONE : View.VISIBLE}" />


        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            android:contentDescription="@null"
            android:onClick="@{()->viewModel.onFabClicked()}"
            android:tint="@color/colorPrimary"
            app:backgroundTint="@color/white"
            app:srcCompat="@android:drawable/ic_dialog_info" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
